# LumaCore

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/lumacore/lumacore/: CameraCaptureController.kt  EffectsRenderController.kt  MainActivity.kt  RecordingController.kt
android/app/src/main/kotlin/com/lumacore/native/: LumaCoreBridge.kt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
docs/ai_plans/: 01-ios-ffmpeg-minimal-recording.md  02-ios-recording-swift-flutter-integration.md  03-ios-metal-render-pipeline.md  04-android-camerax-gl-pipeline.md  05-android-recording-performance-fix.md
ios/Runner/: AppDelegate.swift  CameraCaptureController.swift  CameraPreviewTexture.swift  EffectsRenderController.swift  Info.plist  KeychainFingerprint.swift  RecordingController.swift  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ios/RunnerUITests/: RunnerUITests.swift
lib/: main.dart
lib/core/channels/: native_channel.dart
lib/core/ffi/: lumacore_bindings.dart  lumacore_bindings_generated.dart
lib/core/license/: license_config.dart
lib/core/router/: app_router.dart
lib/core/settings/: recording_settings.dart
lib/features/camera/: camera_screen.dart  effects_controller.dart
lib/features/gallery/: gallery_screen.dart
lib/features/license/: license_screen.dart  splash_screen.dart
lib/features/settings/: settings_screen.dart
lib/widgets/: app_shell.dart
native/: CMakeLists.txt
native/build-ios-device/: ColorCorrection.air  Common.air  Makefile  Particles.air  Vignette.air  lumacore.metallib
native/build-ios-device/tests/: Makefile
native/build-ios-device/tests/lumacore_particle_tests.app/: Info.plist
native/build-ios-device/tests/lumacore_tests.app/: lumacore_tests
native/build-ios-device/tests/lumacore_token_validator_tests.app/: Info.plist
native/build-ios-sim/: ColorCorrection.air  Common.air  Makefile  Particles.air  Vignette.air  lumacore.metallib
native/build-ios-sim/tests/: Makefile
native/build-ios-sim/tests/lumacore_tests.app/: Info.plist  lumacore_tests
native/cmake/: README.md
native/jni/: lumacore_jni.cpp
native/objcxx/: LumaCoreBridge.h  LumaCoreBridge.mm
native/src/api/: lumacore_api.cpp  lumacore_api.h
native/src/encode/: EncoderSession.cpp  EncoderSession.h
native/src/interop/: D3D11VulkanBridge.cpp  D3D11VulkanBridge.h
native/src/license/: TokenValidator.cpp  TokenValidator.h
native/src/render/: EffectParams.h  IRenderBackend.h  PlatformRenderBackendFactory.cpp  PlatformRenderBackendFactory.h  RenderPipeline.cpp  RenderPipeline.h
native/src/render/gl/: GLRenderBackend.cpp  GLRenderBackend.h
native/src/render/gl/shaders/: ShaderSources.h
native/src/render/metal/: MetalRenderBackend.h  MetalRenderBackend.mm
native/src/render/metal/shaders/: ColorCorrection.metal  Common.h  Common.metal  Particles.metal  ShaderTypes.h  Vignette.metal
native/src/render/particles/: ParticleSystem.cpp  ParticleSystem.h
native/src/render/vulkan/: VulkanRenderBackend.cpp  VulkanRenderBackend.h
native/src/util/: RingBuffer.h
native/tests/: CMakeLists.txt  test_particle_system.cpp  test_ring_buffer.cpp  test_token_validator.cpp
native/win32/: DpapiFingerprint.cpp  DpapiFingerprint.h  MfWorkQueue.cpp  MfWorkQueue.h
server/: requirements.txt  run.sh
server/app/: crypto.py  main.py  models.py
server/tests/: test_activate.py
test/: widget_test.dart
tools/ffmpeg/: build_android.sh  build_ios.sh  build_windows.ps1  common.sh
tools/ios/: add_keychain_fingerprint_to_xcodeproj.rb  add_metal_pipeline_to_xcodeproj.rb  build_xcframework.sh
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
